# generic-labels

./: .gitignore  changelog.md  example.hs  generic-labels.cabal  hie.yaml  readme.md
src/Data/: Label.hs
src/Data/Generic/: Labels.hs  Labels.hs-boot
src/Data/Generic/Labels/: Internal.hs
src/Data/Generic/Labels/Internal/: Errors.hs
src/Data/Type/: Error.hs  List.hs  Maybe.hs  Multiplicity.hs
test/: Inspection.hs  Test.hs
test/ShouldCompile/Adapt/: RRR.hs  SingletonArg.hs  SingletonArgOpt.hs  SingletonOpt.hs  TTR.hs  TTT.hs
test/ShouldCompile/Inject/: Basic.hs  PolymorphicR.hs
test/ShouldCompile/Project/: Basic.hs  Polymorphic.hs  PolymorphicR.hs  PolymorphicT.hs
test/ShouldFail/Adapt/: MissingArgs.hs  SuperflousArgs.hs  SuperflousOpts.hs  Unlabelled.hs
test/ShouldFail/Project/: DstDup.hs  LabelMismatch.hs  LabelMismatchPoly.hs  MissingSrc.hs  PolymorphicR.hs  SrcDup.hs  Unlabelled.hs
