cabal-version: 3.0
name: generic-labels
version: 0.1.0
build-type: Simple

common common

  build-depends:
    base
      >= 4.14 && < 4.17

  default-language:
    Haskell2010

  ghc-options:
    -Wall
    -Wcompat
    -Wno-unticked-promoted-constructors

  default-extensions:
    DataKinds
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    NoStarIsType
    PatternSynonyms
    PolyKinds
    ScopedTypeVariables
    StandaloneKindSignatures
    TypeApplications
    TypeFamilyDependencies
    TypeOperators

common generic-lens-core

  build-depends:
    generic-lens-core
      >= 2.0 && < 2.2

library

  import:
    common, generic-lens-core

  hs-source-dirs:
    src

  exposed-modules:
    Data.Generic.Labels
    Data.Generic.Labels.Internal
    Data.Generic.Labels.Internal.Errors
    Data.Label

  other-modules:
    Data.Type.Error
    Data.Type.List
    Data.Type.Maybe
    Data.Type.Multiplicity

test-suite generic-labels-test

  import:
    common

  type:
    detailed-0.9

  build-depends:
    , generic-labels
    , Cabal
        >= 3.0 && < 3.5
    , inspection-testing
        >= 0.4 && < 0.5

  hs-source-dirs:
    test

  test-module:
    Inspection

  other-modules:
    ShouldCompile.Adapt.RRR
    ShouldCompile.Adapt.TTR
    ShouldCompile.Adapt.TTT
    ShouldCompile.Inject.Basic
    ShouldCompile.Project.Basic
    ShouldCompile.Project.Polymorphic
   
  ghc-options:
    -O1
